--- a/Models/Acoustic/2020.03.04_AlignTTS.md
+++ b/Models/Acoustic/2020.03.04_AlignTTS.md
@@ -23,10 +23,21 @@
 
 ## Abstract: 摘要
 
-Targeting at both high efficiency and performance, we propose AlignTTS to predict the mel-spectrum in parallel.
-AlignTTS is based on a Feed-Forward Transformer which generates mel-spectrum from a sequence of characters, and the duration of each character is determined by a duration of predictor.
+<table>
+<tr>
+<td width="50%">
+
+Targeting at both high efficiency and performance, we propose ***AlignTTS*** to predict the mel-spectrum in parallel.
+***AlignTTS*** is based on a Feed-Forward Transformer which generates mel-spectrum from a sequence of characters, and the duration of each character is determined by a duration of predictor.
 Instead of adopting the attention mechanism in Transformer TTS to align text to mel-spectrum, the alignment loss is presented to consider all possible alignments in training by use of dynamic programming.
 Experiments on the LJSpeech dataset show that our model achieves not only state-of-the-art performance which outperforms Transformer TTS by 0.03 in mean option score (MOS), but also a high efficiency which is more than 50 times faster than real-time.
+
+</td>
+<td>
+
+</td>
+</tr>
+</table>
 
 ## 1·Introduction: 引言
 
