--- a/Models/Acoustic/2020.06.08_FastSpeech2.md
+++ b/Models/Acoustic/2020.06.08_FastSpeech2.md
@@ -27,6 +27,10 @@
 
 ## Abstract: 摘要
 
+<table>
+<tr>
+<td width="50%">
+
 Non-autoregressive text to speech (TTS) models such as FastSpeech can synthesize speech significantly faster than previous autoregressive models with comparable quality.
 The training of FastSpeech model relies on an autoregressive teacher model for duration prediction (to provide more information as input) and knowledge distillation (to simplify the data distribution in output), which can ease the one-to-many mapping problem (i.e., multiple speech variations correspond to the same text) in TTS.
 However, FastSpeech has several disadvantages: 1) the teacher-student distillation pipeline is complicated and time-consuming, 2) the duration extracted from the teacher model is not accurate enough, and the target mel-spectrograms distilled from teacher model suffer from information loss due to data simplification, both of which limit the voice quality.
@@ -35,6 +39,13 @@ Specifically, we extract duration, pitch and energy from speech waveform and dir
 We further design FastSpeech 2s, which is the first attempt to directly generate speech waveform from text in parallel, enjoying the benefit of fully end-to-end inference.
 Experimental results show that 1) FastSpeech 2 achieves a 3x training speed-up over FastSpeech, and FastSpeech 2s enjoys even faster inference speed; 2) FastSpeech 2 and 2s outperform FastSpeech in voice quality, and FastSpeech 2 can even surpass autoregressive models.
 Audio samples are available at this https URL.
+
+</td>
+<td>
+
+</td>
+</tr>
+</table>
 
 ## 1·Introduction: 引言
 
