--- a/Models/Acoustic/2021.03.01_AdaSpeech.md
+++ b/Models/Acoustic/2021.03.01_AdaSpeech.md
@@ -25,6 +25,10 @@
 
 ## Abstract: 摘要
 
+<table>
+<tr>
+<td width="50%">
+
 Custom voice, a specific text to speech (TTS) service in commercial speech platforms, aims to adapt a source TTS model to synthesize personal voice for a target speaker using few speech data.
 Custom voice presents two unique challenges for TTS adaptation: 1) to support diverse customers, the adaptation model needs to handle diverse acoustic conditions that could be very different from source speech data, and 2) to support a large number of customers, the adaptation parameters need to be small enough for each target speaker to reduce memory usage while maintaining high voice quality.
 In this work, we propose AdaSpeech, an adaptive TTS system for high-quality and efficient customization of new voices.
@@ -33,6 +37,13 @@ We design several techniques in AdaSpeech to address the two challenges in custo
 We pre-train the source TTS model on LibriTTS datasets and fine-tune it on VCTK and LJSpeech datasets (with different acoustic conditions from LibriTTS) with few adaptation data, e.g., 20 sentences, about 1 minute speech.
 Experiment results show that AdaSpeech achieves much better adaptation quality than baseline methods, with only about 5K specific parameters for each speaker, which demonstrates its effectiveness for custom voice.
 Audio samples are available at this https URL.
+
+</td>
+<td>
+
+</td>
+</tr>
+</table>
 
 ## 1·Introduction: 引言
 
