更新 AdaSpeech2 排版

--- a/Models/Acoustic/2021.04.20_AdaSpeech2.md
+++ b/Models/Acoustic/2021.04.20_AdaSpeech2.md
@@ -25,6 +25,10 @@
 
 ## Abstract: 摘要
 
+<table>
+<tr>
+<td width="50%">
+
 Text to speech (TTS) is widely used to synthesize personal voice for a target speaker, where a well-trained source TTS model is fine-tuned with few paired adaptation data (speech and its transcripts) on this target speaker.
 However, in many scenarios, only untranscribed speech data is available for adaptation, which brings challenges to the previous TTS adaptation pipelines (e.g., AdaSpeech).
 In this paper, we develop AdaSpeech 2, an adaptive TTS system that only leverages untranscribed speech data for adaptation.
@@ -33,6 +37,13 @@ In adaptation, we use untranscribed speech data for speech reconstruction and on
 AdaSpeech 2 has two advantages: 1) Pluggable: our system can be easily applied to existing trained TTS models without re-training.
 2) Effective: our system achieves on-par voice quality with the transcribed TTS adaptation (e.g., AdaSpeech) with the same amount of untranscribed data, and achieves better voice quality than previous untranscribed adaptation methods.
 Synthesized speech samples can be found at this https URL.
+
+</td>
+<td>
+
+</td>
+</tr>
+</table>
 
 ## 1·Introduction: 引言
 
