--- a/Models/E2E/2021.12.04_YourTTS.md
+++ b/Models/E2E/2021.12.04_YourTTS.md
@@ -3,58 +3,79 @@
 <details>
 <summary>基本信息</summary>
 
-- 标题: YourTTS: Towards Zero-Shot Multi-Speaker TTS and Zero-Shot Voice Conversion for Everyone
+- 标题: "YourTTS: Towards Zero-Shot Multi-Speaker TTS and Zero-Shot Voice Conversion for Everyone"
 - 作者:
-  - 01 [Edresson Casanova](../../Authors/Edresson_Casanova.md)
-  - 02 [Julian Weber](../../Authors/Julian_Weber.md)
-  - 03 [Christopher Shulby](../../Authors/Christopher_Shulby.md)
-  - 04 [Arnaldo Candido Junior](../../Authors/Arnaldo_Candido_Junior.md)
-  - 05 [Eren Golge](../../Authors/Eren_Golge.md)
-  - 06 [Moacir Antonelli Ponti](../../Authors/Moacir_Antonelli_Ponti.md)
-- 机构:
-  - [Coqui.AI](../../Institutions/Coqui.AI.md)
-- 时间:
-  - 预印时间: 2021.12.04 ArXiv v1
-  - 预印时间: 2022.01.29 ArXiv v2
-  - 预印时间: 2022.02.16 ArXiv v3
-  - 预印时间: 2023.04.30 ArXiv v4
-  - 更新笔记: 2024.06.18
-- 发表:
-  - [ICML](../../Publications/ICML.md)
+  - 01 Edresson Casanova
+  - 02 Julian Weber
+  - 03 Christopher Shulby
+  - 04 Arnaldo Candido Junior
+  - 05 Eren Golge
+  - 06 Moacir Antonelli Ponti
 - 链接:
   - [ArXiv](https://arxiv.org/abs/2112.02418)
-  - [DOI](https://proceedings.mlr.press/v162/casanova22a.html)
+  - [Publication](https://proceedings.mlr.press/v162/casanova22a.html)
   - [Github](https://github.com/coqui-ai/TTS)
   - [Demo](https://edresson.github.io/YourTTS/)
-  - [Scholar](https://scholar.google.com/scholar?cluster=8575580251111777245)
-- 标签:
-  - [语音合成](../../Tags/SpeechSynthesis.md)
-  - [声音转换](../../Tags/VoiceConversion.md)
-  - [开源](../../Tags/OpenSource.md)
-  - [零样本](../../Tags/Zero-Shot.md)
-  - [多说话人](../../Tags/Multi-Speaker.md)
-- 页数: 12
-- 引用: 46
-- 被引: 231
-- 数据:
+- 文件:
+  - [ArXiv](_PDF/2112.02418v4__YourTTS__Towards_Zero-Shot_Multi-Speaker_TTS_and_Zero-Shot_Voice_Conversion_for_Everyone.pdf)
+  - [Publication](_PDF/2112.02418p0__YourTTS__ICML2022.pdf)
 
 </details>
 
 ## Abstract: 摘要
 
-YourTTS brings the power of a multilingual approach to the task of zero-shot multi-speaker TTS.
-Our method builds upon the VITS model and adds several novel modifications for zero-shot multi-speaker and multilingual training.
-We achieved state-of-the-art (SOTA) results in zero-shot multi-speaker TTS and results comparable to SOTA in zero-shot voice conversion on the VCTK dataset.
+<table><tr><td width="50%">
+
+***YourTTS*** brings the power of a multilingual approach to the task of zero-shot multi-speaker TTS.
+Our method builds upon the **VITS** model and adds several novel modifications for zero-shot multi-speaker and multilingual training.
+We achieved state-of-the-art (SOTA) results in zero-shot multi-speaker TTS and results comparable to SOTA in zero-shot voice conversion on the **VCTK dataset**.
 Additionally, our approach achieves promising results in a target language with a single-speaker dataset, opening possibilities for zero-shot multi-speaker TTS and zero-shot voice conversion systems in low-resource languages.
-Finally, it is possible to fine-tune the YourTTS model with less than 1 minute of speech and achieve state-of-the-art results in voice similarity and with reasonable quality.
+Finally, it is possible to fine-tune the ***YourTTS*** model with less than 1 minute of speech and achieve state-of-the-art results in voice similarity and with reasonable quality.
 This is important to allow synthesis for speakers with a very different voice or recording characteristics from those seen during training.
 
-## 1.Introduction: 引言
+</td><td>
 
-## 2.Related Works: 相关工作
+***YourTTS*** 将多语言方法的能力引入到零样本多说话人文本转语音任务中.
+我们的方法基于 **VITS** 模型, 并添加了数种新式修改用于零样本多说话人和多语言训练.
+我们在零样本多说话人文本转语音中获得了 SoTA 结果, 并在 **VCTK 数据集**上的零样本声音转换任务中取得了和 SoTA 相匹配的结果.
+此外, 我们的方法在单说话人数据集上目标语言获得了具有前景的结果, 开辟了在低资源语言中实现零样本多说话人文本转语音和零样本声音转换系统的可能性.
+最后, 我们可以用不到一分钟的语音对 ***YourTTS*** 模型进行微调, 并在声音相似度和可接受的质量方面取得 SoTA 结果.
+这对于合成与训练时显著不同的声音或录音特征的说话人是至关重要的.
 
-## 3.Methodology: 方法
+</td></tr></table>
 
-## 4.Experiments: 实验
+## 1·Introduction: 引言
 
-## 5.Conclusions: 结论
+<table><tr><td width="50%">
+
+</td></tr></table>
+
+## 2·Related Works: 相关工作
+
+<table><tr><td width="50%">
+
+</td></tr></table>
+
+## 3·Methodology: 方法
+
+<table><tr><td width="50%">
+
+</td></tr></table>
+
+## 4·Experiments: 实验
+
+<table><tr><td width="50%">
+
+</td></tr></table>
+
+## 5·Results: 结果
+
+<table><tr><td width="50%">
+
+</td></tr></table>
+
+## 6·Conclusions: 结论
+
+<table><tr><td width="50%">
+
+</td></tr></table>
