--- a/Models/E2E/2022.03.29_VoiceMe.md
+++ b/Models/E2E/2022.03.29_VoiceMe.md
@@ -3,53 +3,90 @@
 <details>
 <summary>基本信息</summary>
 
-- 标题: VoiceMe: Personalized Voice Generation in TTS
+- 标题: "VoiceMe: Personalized Voice Generation in TTS"
 - 作者:
-  - 01 Pol_van_Rijn
-  - 02 Silvan_Mertes
-  - 03 Dominik_Schiller
-  - 04 Piotr_Dura
-  - 05 Hubert_Siuzdak
-  - 06 Peter_M._C._Harrison
-  - 07 Elisabeth_André
-  - 08 Nori_Jacoby
-- 机构:
-  - 机构
-- 时间:
-  - 预印时间: 2022.03.29 ArXiv v1
-  - 预印时间: 2022.07.11 ArXiv v2
-  - 更新笔记: 2024.06.20
-- 发表:
-  - [InterSpeech](../../Publications/InterSpeech.md)
+  - 01 Pol van Rijn
+  - 02 Silvan Mertes
+  - 03 Dominik Schiller
+  - 04 Piotr Dura
+  - 05 Hubert Siuzdak
+  - 06 Peter M.C.Harrison
+  - 07 Elisabeth André
+  - 08 Nori Jacoby
 - 链接:
   - [ArXiv](https://arxiv.org/abs/2203.15379)
-  - [DOI](https://www.isca-archive.org/interspeech_2022)
+  - [Publication](https://www.isca-archive.org/interspeech_2022)
   - [Github](https://github.com/polvanrijn/VoiceMe)
   - [Demo](https://polvanrijn.github.io/VoiceMe/)
-  - [Scholar](https://scholar.google.com/scholar?cluster=3526518568821604986)
-- 标签:
-  - [SpeechSynthesis](../../Tags/SpeechSynthesis.md)
-  - [OpenSource](../../Tags/OpenSource.md)
-- 页数: 5
-- 引用: 26
-- 被引: 6
-- 数据:
-  - ?
-- 复现:
-  - ?
+- 文件:
+  - [ArXiv](_PDF/2203.15379v2__VoiceMe__Personalized_Voice_Generation_in_TTS.pdf)
+  - [Publication](_PDF/2022.15379p0__VoiceMe__InterSpeech2022.pdf)
 
 </details>
 
 ## Abstract: 摘要
 
-Novel text-to-speech systems can generate entirely new voices that were not seen during training. However, it remains a difficult task to efficiently create personalized voices from a high-dimensional speaker space. In this work, we use speaker embeddings from a state-of-the-art speaker verification model (SpeakerNet) trained on thousands of speakers to condition a TTS model. We employ a human sampling paradigm to explore this speaker latent space. We show that users can create voices that fit well to photos of faces, art portraits, and cartoons. We recruit online participants to collectively manipulate the voice of a speaking face. We show that (1) a separate group of human raters confirms that the created voices match the faces, (2) speaker gender apparent from the face is well-recovered in the voice, and (3) people are consistently moving towards the real voice prototype for the given face. Our results demonstrate that this technology can be applied in a wide number of applications including character voice development in audiobooks and games, personalized speech assistants, and individual voices for people with speech impairment.
+<table><tr><td width="50%">
 
-## 1.Introduction: 引言
+Novel text-to-speech systems can generate entirely new voices that were not seen during training.
+However, it remains a difficult task to efficiently create personalized voices from a high-dimensional speaker space.
+In this work, we use speaker embeddings from a state-of-the-art speaker verification model (**SpeakerNet**) trained on thousands of speakers to condition a TTS model.
+We employ a human sampling paradigm to explore this speaker latent space.
+We show that users can create voices that fit well to photos of faces, art portraits, and cartoons.
+We recruit online participants to collectively manipulate the voice of a speaking face.
+We show that (1) a separate group of human raters confirms that the created voices match the faces, (2) speaker gender apparent from the face is well-recovered in the voice, and (3) people are consistently moving towards the real voice prototype for the given face.
+Our results demonstrate that this technology can be applied in a wide number of applications including character voice development in audiobooks and games, personalized speech assistants, and individual voices for people with speech impairment.
 
-## 2.Related Works: 相关工作
+</td><td>
 
-## 3.Methodology: 方法
+新式文本转语音系统可以生成训练时从未见过的全新声音.
+然而要从高维说话人空间中有效地创建个性化声音仍然是一个困难的任务.
 
-## 4.Experiments: 实验
+在本项工作中, 我们使用来自在数千说话人上训练的 SoTA 说话人验证模型 **SpeakerNet** 的说话人嵌入来条件化 TTS 模型.
+我们采用人类采样范式来探索这一说话人潜在空间.
+我们展示了用户可以创造符合人脸照片, 艺术画廊和卡通风格的声音.
+我们征集线上参与者来共同操纵一个说话人脸的声音.
+我们展示了:
+1. 一组独立的人类评分者确认生成的声音与面部相匹配;
+2. 从面部可明显看出的说话人性别在声音中得到了很好的恢复;
+3. 人们在给定面部的情况下，始终倾向于真实的语音原型.
 
-## 5.Conclusions: 结论
+我们的结果表明, 这项技术可以应用于广泛的领域, 包括有声书和游戏中的人物声音开发, 个性化语音助手以及为有言语障碍的人提供个人化的语音.
+
+</td></tr></table>
+
+## 1·Introduction: 引言
+
+<table><tr><td width="50%">
+
+</td></tr></table>
+
+## 2·Related Works: 相关工作
+
+<table><tr><td width="50%">
+
+</td></tr></table>
+
+## 3·Methodology: 方法
+
+<table><tr><td width="50%">
+
+</td></tr></table>
+
+## 4·Experiments: 实验
+
+<table><tr><td width="50%">
+
+</td></tr></table>
+
+## 5·Results: 结果
+
+<table><tr><td width="50%">
+
+</td></tr></table>
+
+## 6·Conclusions: 结论
+
+<table><tr><td width="50%">
+
+</td></tr></table>
