--- a/Surveys/2024.05.31__Survey__A_Survey_of_DL_Audio_Generation_Methods_(14P).md
+++ b/Surveys/2024.05.31__Survey__A_Survey_of_DL_Audio_Generation_Methods_(14P).md
@@ -20,8 +20,7 @@
 
 ## Abstract: 摘要
 
-<details>
-<summary>展开原文</summary>
+<table><tr><td width="50%">
 
 This article presents a review of typical techniques used in three distinct aspects of deep learning model development for audio generation.
 In the first part of the article, we provide an explanation of audio representations, beginning with the fundamental audio waveform.
@@ -31,8 +30,7 @@ The following architectures are addressed: (1) Autoencoders (2) Generative adver
 Lastly, we will examine four distinct evaluation metrics that are commonly employed in audio generation.
 This article aims to offer novice readers and beginners in the field a comprehensive understanding of the current state of the art in audio generation methods as well as relevant studies that can be explored for future research.
 
-</details>
-<br>
+</td><td>
 
 本文对音频生成领域深度学习模型开发中使用的典型技术进行了综述, 涵盖了三个不同的方面.
 在文章的第一部分, 我们首先解释了音频表示, 从基本的音频波形开始.
@@ -42,10 +40,11 @@ This article aims to offer novice readers and beginners in the field a comprehen
 最后, 我们将探讨音频生成中常用的四种不同的评估指标.
 本文旨在为该领域的初学者和新手提供对音频生成方法当前技术水平的全面理解, 以及可供未来研究探索的相关研究.
 
+</td></tr></table>
+
 ## 1.Introduction: 引言 <a id="sec.intro"></a>
 
-<details>
-<summary>展开原文</summary>
+<table><tr><td width="50%">
 
 The trend towards deep learning in Computer Vision (CV) and Natural Language Processing (NLP) has also reached the field of audio generation \cite{peeters_DeepLearningAudio_2021}.
 Deep learning has allowed us to move away from the complexity of hand-crafted features towards simple representations by letting the depth of the model create more complex mappings.
@@ -66,8 +65,7 @@ Each listing of works on a topic is sorted so that the most recent articles are 
 
 The article is structured as follows: section \ref{sec:related_work} presents previous work dealing with deep learning in audio, section \ref{sec:background} gives a brief overview of previous audio generation methods in text-to-speech and music generation, section \ref{sec:audio_features} deals with the two most prominent features and a recent advancement, section \ref{sec:architectures} discusses five deep learning architectures and some of their popular extensions, and finally, section \ref{sec:eval_metrics} looks at measuring the performance of generation models, some of which are specific to audio generation, while others are more generally applicable.
 
-</details>
-<br>
+</td><td>
 
 深度学习在计算机视觉 (CV) 和自然语言处理 (NLP) 领域的趋势也已触及音频生成领域 (peeters_DeepLearningAudio_2021).
 深度学习使我们能够摆脱手工特征的复杂性, 转而通过模型的深度创建更复杂的映射.
@@ -94,12 +92,13 @@ The article is structured as follows: section \ref{sec:related_work} presents pr
 - [架构一节](#sec.architectures)将讨论五种深度学习架构及其一些流行的扩展;
 - 最后, [评估指标一节](#sec.eval_metrics)将探讨生成模型的性能测量方法, 其中一些指标专门针对音频生成, 而其他指标则具有更广泛的适用性.
 
+</td></tr></table>
+
 ## 2.Related Works: 相关工作
 
 <a id="sec.related_work"></a>
 
-<details>
-<summary>展开原文</summary>
+<table><tr><td width="50%">
 
 In this section, we will mention some of the works that are good sources for further research in the field of audio generation.
 Some of them investigate only a specific model architecture or sub-area, while others, like this work, show a broader view.
@@ -220,14 +219,20 @@ Finally, it discusses a variety of speech processing tasks, including neural spe
 解释了监督, 无监督, 半监督和自我导向的语音表示学习.
 最后它讨论了各种语音处理任务, 包括神经语音合成, 语音到语音翻译, 语音增强, 音频超分辨率以及转移学习技术.
 
+</td></tr></table>
+
 ## 3.Background: 背景
 
 <a id="sec.background"></a>
+
+<table><tr><td width="50%">
 
 The main purpose of this section is to show how audio generation has developed over the years up to this point.
 Since audio generation is a broad field that encompasses many different areas, such as text-to-speech synthesis, voice conversion, speech enhancement,... ["Deep Learning for Audio and Music (2021)"](2015_DL_for_Acoustic_Modeling_in_Parametric_Speech_Generation.md), we will only focus on two different areas of audio generation: text-to-speech synthesis and music generation.
 There is no particular reason for this choice, except that they are among the more popular ones.
 The trend we want to show is how domain-specific knowledge is shifting towards general-purpose methods and how feature engineering is turning into feature recognition.
+
+</td><td>
 
 本节的主要目的是展示音频生成领域多年来是如何发展到目前这个阶段的.
 由于音频生成是一个广泛的领域, 涵盖了许多不同的领域, 如文本到语音合成, 语音转换, 语音增强等 (["Deep Learning for Audio and Music (2021)"](2015_DL_for_Acoustic_Modeling_in_Parametric_Speech_Generation.md)),
@@ -236,7 +241,11 @@ The trend we want to show is how domain-specific knowledge is shifting towards g
 这个选择没有特别的理由, 只是因为它们是更受欢迎的领域之一.
 我们想要展示的趋势是特定领域知识如何向通用方法转变, 以及特征工程如何转变为特征识别.
 
+</td></tr></table>
+
 ### Text-to-Speech: 文本转语音
+
+<table><tr><td width="50%">
 
 Text-to-speech (TTS) is a task with numerous applications, ranging from phone assistants to GPS navigators.
 The desire to construct a machine that can communicate with a human has historically fueled growth in this subject.
@@ -285,10 +294,11 @@ Examples of vocoders include MLSA \cite{imai_CepstralAnalysisSynthesis_1983}, ST
 Vocaine \cite{agiomyrgiannakis_VocaineVocoderApplications_2015}.
 Finally, there have also been attempts to construct a fully end-to-end system, which means integrating text analysis and acoustic modeling into a single model \cite{wang_FirstStepEndtoEnd_2016}.
 
+</td></tr></table>
+
 ### Music Generation: 音乐生成
 
-<details>
-<summary>展开原文</summary>
+<table><tr><td width="50%">
 
 Music has been a part of human life long before the invention of the electronic computer, and people have developed many guidelines for how beautifully sounded music should be made.
 For this reason alone, the discipline of music generation has placed a heavy emphasis on rule-based systems that use music theory to create logical rules.
@@ -299,8 +309,7 @@ Specific methods include discrete nonlinear maps \cite{pressing_NonlinearMapsGen
 Unlike language, music employs a significantly smaller number of  acoustic features.
 These include MIDI representation \cite{moroni_VoxPopuliInteractive_2000,huang_DeepLearningMusic_2016}, encoded sheet music \cite{chen_CreatingMelodiesEvolving_2001}, binary vector of an octave \cite{lavrenko_PolyphonicMusicModeling_2003}, and piano roll \cite{boulanger-lewandowski_ModelingTemporalDependencies_2012,huang_DeepLearningMusic_2016}.
 
-</details>
-<br>
+</td><td>
 
 音乐在电子计算机发明之前就已经是人类生活的一部分, 人们已经发展了许多关于如何制作优美音乐的指导原则.
 正因如此, 音乐生成的原则在很大程度上依赖于基于规则的系统, 这些系统使用音乐理论来创建逻辑规则.
@@ -312,20 +321,22 @@ These include MIDI representation \cite{moroni_VoxPopuliInteractive_2000,huang_D
 和语言不同, 音乐使用的声学特征数要少得多.
 这些特征包括 MIDI 表示, 编码乐谱, 八度二进制向量, 和自动钢琴打孔纸卷.
 
+</td></tr></table>
+
 ## 4.Audio Features: 音频特征 <a id="audio-features"></a>
 
-<details>
-<summary>展开原文</summary>
+<table><tr><td width="50%">
 
 Even though there have been numerous audio features used throughout the history of audio generation.
 Here we will describe the two most popular features, the raw waveform and the log-mel spectrogram, but also mention features that have recently gained traction.
 Keep in mind that there are too many features to describe them all, especially if we take into account the many hand-crafted features that were created before the rise of deep learning methods.
 
-</details>
-<br>
+</td><td>
 
 尽管在音频生成的历史中使用了众多的音频特征, 但在这里我们将描述两个最流行的特征: 原始波形和梅尔对数频谱图, 同时也会提及一些最近获得关注的特征.
 请记住, 有太多的特征无法描述, 尤其是如果我们考虑到在深度学习方法兴起之前创建的许多手工制作的特征.
+
+</td></tr></table>
 
 ### Raw Waveform: 原始波形
 
@@ -733,8 +744,7 @@ While the FAD measure is more related to human perception \cite{ghosal_TexttoAu
 
 ## 7.Conclusions: 结论
 
-<details>
-<summary>展开原文</summary>
+<table><tr><td width="50%">
 
 The development of deep learning methods has significantly changed the field of audio generation.
 In this work, we have presented three important parts of building a deep learning model for the task of audio generation.
