更新 FastPitch 排版

--- a/Models/Acoustic/2020.06.11_FastPitch.md
+++ b/Models/Acoustic/2020.06.11_FastPitch.md
@@ -19,32 +19,51 @@
 
 ## Abstract: 摘要
 
-<table>
-<tr>
-<td width="50%">
+<table><tr><td width="50%">
 
-We present FastPitch, a fully-parallel text-to-speech model based on FastSpeech, conditioned on fundamental frequency contours.
+We present ***FastPitch***, a fully-parallel text-to-speech model based on **FastSpeech**, conditioned on fundamental frequency contours.
 The model predicts pitch contours during inference.
 By altering these predictions, the generated speech can be more expressive, better match the semantic of the utterance, and in the end more engaging to the listener.
-Uniformly increasing or decreasing pitch with FastPitch generates speech that resembles the voluntary modulation of voice.
+Uniformly increasing or decreasing pitch with ***FastPitch*** generates speech that resembles the voluntary modulation of voice.
 Conditioning on frequency contours improves the overall quality of synthesized speech, making it comparable to state-of-the-art.
-It does not introduce an overhead, and FastPitch retains the favorable, fully-parallel Transformer architecture, with over 900× real-time factor for mel-spectrogram synthesis of a typical utterance.
+It does not introduce an overhead, and ***FastPitch*** retains the favorable, fully-parallel Transformer architecture, with over 900× real-time factor for mel-spectrogram synthesis of a typical utterance.
 
-</td>
-<td>
+</td><td>
 
-</td>
-</tr>
-</table>
+</td></tr></table>
 
 ## 1·Introduction: 引言
 
+<table><tr><td width="50%">
+
+</td></tr></table>
+
 ## 2·Related Works: 相关工作
+
+<table><tr><td width="50%">
+
+</td></tr></table>
 
 ## 3·Methodology: 方法
 
+<table><tr><td width="50%">
+
+</td></tr></table>
+
 ## 4·Experiments: 实验
+
+<table><tr><td width="50%">
+
+</td></tr></table>
 
 ## 5·Results: 结果
 
+<table><tr><td width="50%">
+
+</td></tr></table>
+
 ## 6·Conclusions: 结论
+
+<table><tr><td width="50%">
+
+</td></tr></table>
